shared and pages

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+//! init css
+@import "./styles/init";
+@import "./styles/colors";
+
+//! google font
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+//! prime flex
+@import "~primeflex/primeflex.css";
