banner was added

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,3 @@
-<app-slider [items]="movies" ></app-slider>
+<app-slider [items]="upcomingMovies" ></app-slider>
+<app-items-banner [items]="popularMovies" title="Popular Movies"></app-items-banner>
+<app-items-banner [items]="topRatedMovies" title="Top Rated Movies"></app-items-banner>
