pagination was added

--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -6,7 +6,7 @@
       >/10
     </div>
     <div class="item-image">
-      <img [alt]="itemData.title" [src]="'https://image.tmdb.org/t/p/original/' + itemData.backdrop_path" />
+      <img [alt]="itemData.title" [src]="'https://image.tmdb.org/t/p/w780/' + itemData.backdrop_path" />
     </div>
     <div class="item-title">{{itemData.title}}</div>
   </a>
