--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -2,7 +2,7 @@
   <ng-container *ngFor="let item of items; let i = index">
     <div class="slide" *ngIf="i == currentSlideIndex" @slideFade>
       <div class="slide-bg">
-        <img class="slide-bg-image" alt="" [src]="'https://image.tmdb.org/t/p/original/' + item.backdrop_path" />
+        <img class="slide-bg-image" alt="" [src]="'https://image.tmdb.org/t/p/w780/' + item.backdrop_path" />
       </div>
       <div class="slide-pane">
         <h2 class="name">{{ item.title }}</h2>
