--- a/src/app/pages/movies/movies.component.html
+++ b/src/app/pages/movies/movies.component.html
@@ -1,1 +1,15 @@
-<p>movies works!</p>
+<div class="container">
+  <div class="grid">
+    <div class="col-6 md:col-3 lg:col-3" *ngFor="let movie of movies">
+      <app-item [itemData]="movie"></app-item>
+    </div>
+  </div>
+  <div>
+
+    <p-paginator
+      (onPageChange)="paginate($event)"
+      [rows]="20"
+      [totalRecords]="10000"
+    ></p-paginator>
+  </div>
+</div>
