movie detail was added

--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,13 +1,13 @@
-<ng-container *ngIf='itemData' >
-  <a class="item">
+<ng-container *ngIf="itemData">
+  <a class="item" [routerLink]="'/movie/' + itemData.id">
     <div class="item-rating">
       <i class="app-icon">star</i>
-      <span>{{itemData.vote_average}}</span
+      <span>{{ itemData.vote_average }}</span
       >/10
     </div>
     <div class="item-image">
       <img [alt]="itemData.title" [src]="'https://image.tmdb.org/t/p/w780/' + itemData.backdrop_path" />
     </div>
-    <div class="item-title">{{itemData.title}}</div>
+    <div class="item-title">{{ itemData.title }}</div>
   </a>
 </ng-container>
