--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar">
-    <a href="" class="navbar-logo">
+    <a routerLink="/" class="navbar-logo">
       <img src="assets/images/logo.jpeg" alt="" />
     </a>
     <ul class="navbar-links">
