--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -1,27 +1,75 @@
-<ng-container *ngIf='movie' >
-  <app-slider [items]='[movie]' [isBanner]='true' ></app-slider>
-  
+<ng-container *ngIf="movie">
+  <app-slider [items]="[movie]" [isBanner]="true"></app-slider>
+
   <div class="card">
     <p-tabView>
       <p-tabPanel header="Overwiev">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <div class="grid">
+          <div class="col-12 md:col-3 lg:col-3">
+            <img [src]="'https://image.tmdb.org/t/p/w780/' + movie.poster_path" [alt]="movie.title" class="poster" />
+          </div>
+          <div class="col-12 md:col-9 lg:col-9">
+            <h2>Overview</h2>
+            <p class="overview">{{ movie.overview }}</p>
+            <div class="stat">
+              <div class="label">Release Date:</div>
+              <div class="value">
+                {{ movie.release_date | date : 'dd.MM.yyyy' }}
+              </div>
+            </div>
+            <div class="stat">
+              <div class="label">Language:</div>
+              <div class="value">
+                {{ movie.original_language | uppercase }}
+              </div>
+            </div>
+            <div class="stat">
+              <div class="label">Revenue:</div>
+              <div class="value">
+                {{ movie.revenue | currency }}
+              </div>
+            </div>
+            <div class="stat">
+              <div class="label">Duration:</div>
+              <div class="value">
+                {{ movie.runtime }} min
+              </div>
+            </div>
+            <div class="stat">
+              <div class="label">Satatus:</div>
+              <div class="value">
+                {{ movie.status }}
+              </div>
+            </div>
+            <div class="stat">
+              <div class="label">Genres:</div>
+              <div class="value">
+                <span *ngFor='let genre of movie.genres' >
+                  {{ genre.name }}
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
       </p-tabPanel>
       <p-tabPanel header="Videos">
-        <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
-          ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Consectetur, adipisci velit, sed quia non numquam eius modi.
-        </p>
+        <div class='grid'>
+          <ng-container *ngFor='let movieVideo of movieVideos' >
+            <div class='col-12 md:col-4 lg:col-4'>
+              <app-video-embed [key]='movieVideo.key' [site]='movieVideo.site' ></app-video-embed>
+            </div>
+          </ng-container>
+        </div>
       </p-tabPanel>
       <p-tabPanel header="Photos">
         <p>
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa
-          qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus.
+          At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
+          atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique
+          sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum
+          facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil
+          impedit quo minus.
         </p>
       </p-tabPanel>
     </p-tabView>
   </div>
-
 </ng-container>
