--- a/src/app/pages/genres/genres.component.html
+++ b/src/app/pages/genres/genres.component.html
@@ -2,7 +2,7 @@
   <h1>Movies Genres</h1>
   <div class="grid">
     <div class="col-6 md:col-3 lg:col-2" *ngFor="let genre of genres" >
-      <a class="genre-link" [routerLink]="'movie/genres' + genre.id">{{ genre.name }}</a>
+      <a class="genre-link" [routerLink]="'movies/' + genre.id">{{ genre.name }}</a>
     </div>
   </div>
 </div>
