--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -86,5 +86,7 @@
       </ng-template>
     </p-carousel>
 
+    <app-items-banner [items]="similarMovies" title="Similar Movies"></app-items-banner>
+
   </div>
 </ng-container>
