--- a/src/app/pages/movies/movies.component.html
+++ b/src/app/pages/movies/movies.component.html
@@ -1,11 +1,27 @@
 <div class="container">
   <div class="grid">
+    <div class="col-12">
+      <div class="p-fluid">
+        <span class="p-input-icon-left">
+          <i class="pi pi-search"></i>
+          <input
+            class='input'
+            type="text"
+            pInputText
+            placeholder="Search"
+            [(ngModel)]='searchValue'
+            (change)='searchChanged()'
+          />
+        </span>
+      </div>
+    </div>
+  </div>
+  <div class="grid">
     <div class="col-6 md:col-3 lg:col-3" *ngFor="let movie of movies">
       <app-item [itemData]="movie"></app-item>
     </div>
   </div>
   <div>
-
     <p-paginator
       (onPageChange)="paginate($event)"
       [rows]="20"
